# polyu-internship-project

./: .gitignore  99-project-planning.md  README.md  requirements-dev.txt  requirements.txt
data/: README.md
project/backend/: README.md  pyproject.toml  seed_knowledge_base.py
project/backend/src/: README.md
project/backend/src/smpl_service/: README.md  __init__.py  __main__.py
project/backend/src/smpl_service/modeling/: README.md  __init__.py
project/backend/src/smpl_service/modeling/adapters/: README.md  __init__.py  dataset_obj_input_adapter.py  file_output_writer.py  image_input_adapter.py  measurement_input_adapter.py  mocap_npz_input_adapter.py  mock_input_adapter.py  mock_model_backend.py  passthrough_model_backend.py  scan_input_adapter.py  smplx_mocap_backend.py  smplx_param_input_adapter.py  video_input_adapter.py
project/backend/tests/: README.md  test_cli_help.py  test_cli_run.py  test_contracts.py  test_dataset_obj_pipeline.py  test_mocap_pipeline.py  test_mock_components.py  test_mock_pipeline.py
project/model/: README.md  pyproject.toml
project/model/src/: README.md
project/model/src/smpl_model/: README.md  __init__.py  __main__.py
project/model/src/smpl_model/app/: README.md  __init__.py  environment_check.py  mocap_export.py  smplx_export.py  smplx_interactive.py
project/model/src/smpl_model/domain/: README.md  __init__.py  environment.py  mesh_export.py
project/model/src/smpl_model/entrypoints/: README.md  __init__.py  cli.py
project/model/tests/: README.md  test_check_env.py  test_mocap_export.py  test_smplx_export.py
(+150 files in other folders)
