[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smpl-service"
version = "0.1.0"
description = "Local-first SMPL body modeling service MVP"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "dashscope>=1.20.0", "fastapi>=0.110.0", "uvicorn>=0.29.0", "chromadb>=0.5.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
